cabal-version:      3.0
name:               hwave
version:            0.1.0.0
synopsis:           An EDSL for generating PCM WAV files.
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Katherine Reid
maintainer:         reidst@hendrix.edu
-- copyright:
category:           Sound
build-type:         Simple
extra-doc-files:    CHANGELOG.md, INSTALLING.md, README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Hwave
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.16.4.0, bytestring >=0.12.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable example
    main-is:          Main.hs
    build-depends:    base >=4.16.4.0, bytestring >=0.12.2.0, hwave
    hs-source-dirs:   exe
    default-language: Haskell2010

